# ktp-call-ui

./: CMakeLists.txt
libktpcall/: CMakeLists.txt  call-content-handler.cpp  call-content-handler.h
libktpcall/private/: tf-audio-content-handler.h  tf-channel-handler.cpp  tf-content-handler.h  tf-video-content-handler.cpp  tf-video-content-handler.h
libqf/: CMakeLists.txt  README.rst  candidate.h  codec.cpp  codec.h  conference.cpp  conference.h  enums.h  gen.cpp  participant.h  qf.cpp  qf.h  session.cpp  session.h  stream.h
libqf/test/: CMakeLists.txt  codectest.cpp  qfstest.cpp  qfstest.h  sessiontest.cpp
libqtf/: CMakeLists.txt  qtf.h
src/: CMakeLists.txt  call-window.cpp  call-window.h  callwindowui.rc  dtmf-handler.cpp  dtmf-handler.h  dtmf-qml.cpp  dtmf-qml.h  qml-interface.cpp  qml-interface.h  qmlInterface.cpp  qmlInterface.h  selection-window.cpp  selection-window.h  selectionwindow.cpp  selectionwindow.h  systemtray-icon.cpp  systemtray-icon.h
